--- a/demo/index.html
+++ b/demo/index.html
@@ -24,37 +24,54 @@
 			<d2l-demo-snippet>
 				<template>
 					<div class="d2l-background-mica">
-					<d2l-list>
-						<d2l-labs-list-item-accumulator>
-							<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
-							Employee Orientation
-							<div slot="secondary">Course &middot; 33 mins</div>
-							<div slot="supporting-information">Due: 5 days after being assigned</div>
-							<div slot="actions">
-								<d2l-button-icon text="My Button" icon="d2l-tier1:more"></d2l-button-icon>
-							</div>
-						</d2l-labs-list-item-accumulator>
-						<d2l-labs-list-item-accumulator>
-							<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
-							Content
-							<div slot="secondary">Course &middot; 33 mins</div>
-						</d2l-labs-list-item-accumulator>
-						<d2l-labs-list-item-accumulator>
-							<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
-							Content
-							<div slot="secondary">Course &middot; 33 mins</div>
-						</d2l-labs-list-item-accumulator>
-					</d2l-list>
-				</div>
+						<d2l-list>
+							<d2l-labs-list-item-accumulator>
+								Employee Orientation
+								<div slot="secondary">Course &middot; 33 mins</div>
+								<div slot="supporting-information">Due: 5 days after being assigned</div>
+								<div slot="actions">
+									<d2l-button-icon text="My Button" icon="d2l-tier1:more"></d2l-button-icon>
+								</div>
+							</d2l-labs-list-item-accumulator>
+							<d2l-labs-list-item-accumulator>
+								Content
+								<div slot="secondary">Course &middot; 33 mins</div>
+							</d2l-labs-list-item-accumulator>
+							<d2l-labs-list-item-accumulator>
+								Content
+								<div slot="secondary">Course &middot; 33 mins</div>
+							</d2l-labs-list-item-accumulator>
+						</d2l-list>
+					</div>
 				</template>
 			</d2l-demo-snippet>
 
 			<h2>List accumulator (with illustration)</h2>
 			<d2l-demo-snippet>
 				<template>
-					<d2l-list>
-						<d2l-labs-list-item-accumulator></d2l-labs-list-item-accumulator>
-					</d2l-list>
+					<div class="d2l-background-mica">
+						<d2l-list>
+							<d2l-labs-list-item-accumulator>
+								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
+								Employee Orientation
+								<div slot="secondary">Course &middot; 33 mins</div>
+								<div slot="supporting-information">Due: 5 days after being assigned</div>
+								<div slot="actions">
+									<d2l-button-icon text="My Button" icon="d2l-tier1:more"></d2l-button-icon>
+								</div>
+							</d2l-labs-list-item-accumulator>
+							<d2l-labs-list-item-accumulator>
+								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
+								Content
+								<div slot="secondary">Course &middot; 33 mins</div>
+							</d2l-labs-list-item-accumulator>
+							<d2l-labs-list-item-accumulator>
+								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg"></img>
+								Content
+								<div slot="secondary">Course &middot; 33 mins</div>
+							</d2l-labs-list-item-accumulator>
+						</d2l-list>
+					</div>
 				</template>
 			</d2l-demo-snippet>
 
