--- a/demo/index.html
+++ b/demo/index.html
@@ -56,8 +56,8 @@
 								Employee Orientation
 								<div slot="secondary">Course &middot; 33 mins</div>
 								<div slot="supporting-information">Due: 5 days after being assigned</div>
-								<div slot="actions">
-									<d2l-button-icon text="My Button" icon="d2l-tier1:more"></d2l-button-icon>
+								<div slot="primary-action">
+									<d2l-button-icon text="My Button" icon="tier1:search"></d2l-button-icon>
 								</div>
 							</d2l-labs-list-item-accumulator>
 							<d2l-labs-list-item-accumulator>
