Added dynamic dropdown menu

--- a/demo/index.html
+++ b/demo/index.html
@@ -69,11 +69,13 @@
 								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg">
 								Content
 								<div slot="secondary">Course &middot; 33 mins</div>
+								<d2l-menu-item text="Delete" slot="secondary-action"></d2l-menu-item>
 							</d2l-labs-list-item-accumulator>
 							<d2l-labs-list-item-accumulator>
 								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg">
 								Content
 								<div slot="secondary">Course &middot; 33 mins</div>
+								<d2l-menu-item text="Delete" slot="secondary-action"></d2l-menu-item>
 							</d2l-labs-list-item-accumulator>
 						</d2l-list>
 					</div>
