--- a/demo/index.html
+++ b/demo/index.html
@@ -5,9 +5,6 @@
 		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/demo/demo-page.js';
-			import '@brightspace-ui/core/components/dropdown/dropdown-menu.js';
-			import '@brightspace-ui/core/components/dropdown/dropdown-button.js';
-			import '@brightspace-ui/core/components/menu/menu.js';
 			import '@brightspace-ui/core/components/menu/menu-item.js';
 			import '../list-item-accumulator.js';
 			import './demo-list-usage.js';
@@ -34,7 +31,7 @@
 						<d2l-labs-list-item-accumulator>
 							Employee Orientation
 							<div slot="secondary">Course &middot; 33 mins</div>
-							<div slot="supporting-information">Due: 5 days after being assigned</div>
+							<div slot="supporting-info">Due: 5 days after being assigned</div>
 							<div slot="actions">
 								<d2l-button-icon text="My Button" icon="d2l-tier1:more"></d2l-button-icon>
 							</div>
@@ -61,7 +58,7 @@
 								<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg">
 								Employee Orientation
 								<div slot="secondary">Course &middot; 33 mins</div>
-								<div slot="supporting-information">Due: 5 days after being assigned</div>
+								<div slot="supporting-info">Due: 5 days after being assigned</div>
 								<d2l-button-icon text="My Button" icon="tier1:search" slot="primary-action"></d2l-button-icon>
 								<d2l-menu-item text="Delete" slot="secondary-action"></d2l-menu-item>
 							</d2l-labs-list-item-accumulator>
