Primary action now in drop down menu for mobile

--- a/demo/index.html
+++ b/demo/index.html
@@ -59,7 +59,7 @@
 								Employee Orientation
 								<div slot="secondary">Course &middot; 33 mins</div>
 								<div slot="supporting-info">Due: 5 days after being assigned</div>
-								<d2l-button-icon text="My Button" icon="tier1:search" slot="primary-action"></d2l-button-icon>
+								<d2l-button-icon onclick="alert('foo')" text="My Button" icon="tier1:search" slot="primary-action"></d2l-button-icon>
 								<d2l-menu-item text="Delete" slot="secondary-action"></d2l-menu-item>
 							</d2l-labs-list-item-accumulator>
 							<d2l-labs-list-item-accumulator>
