--- a/test/list-item-accumulator.visual-diff.html
+++ b/test/list-item-accumulator.visual-diff.html
@@ -13,7 +13,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body class="d2l-typography">
-		<div style="background-color: #bbb;">
+		<div style="background-color: #bbbbbb;">
 			<d2l-list id="default">
 				<d2l-labs-list-item-accumulator>
 					<img slot="illustration" src="https://s.brightspace.com/course-images/images/e5fd575a-bc14-4a80-89e1-46f349a76178/tile-high-density-max-size.jpg">
