--- a/test/list-item-accumulator.visual-diff.html
+++ b/test/list-item-accumulator.visual-diff.html
@@ -11,6 +11,15 @@
 		<title>d2l-labs-list-item-accumulator visual-diff tests</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
+		<style>
+			html {
+				font-size: 20px;
+			}
+			body {
+				margin: 0;
+				padding: 38px;
+			}
+		</style>
 	</head>
 	<body class="d2l-typography">
 		<div style="background-color: #bbbbbb;">
